clusters/base/apps/downloadarr/prowlarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - name: prowlarr
      protocol: TCP
      port: 80
      targetPort: http
