clusters/base/apps/downloadarr/prowlarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-http
spec:
  parentRefs:
    - name: default
  hostnames:
    - prowlarr.talos.kidibox.net
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
