clusters/base/apps/downloadarr/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: prowlarr
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr:1.21.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9696
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - name: prowlarr
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-http
spec:
  parentRefs:
    - name: default
  hostnames:
    - prowlarr.talos.kidibox.net
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
